# my-news-station

./: .aiignore  .cursorignore  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  TODO.md  docker-compose.yml  local-setup.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-image.yml  release.yml
frontend/: index.html
frontend/js/: crosspoint.js  epubReader.js  main.js  playlist.js  scraperStatus.js  settings.js  utils.js
k8s/: deployment.yaml  pvc.yaml  seed-config.example.json  service.yaml
scraper/: requirements.txt  scraper.py
scraper/tests/: test_scraper.py
server/: Cargo.toml
server/src/: main.rs
